--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,11 +31,13 @@ endorsed.classpath=
 excludes=
 file.reference.javax.ws.rs-api-2.0.jar=lib/javax.ws.rs-api-2.0.jar
 file.reference.javax.ws.rs.jar=lib/javax.ws.rs.jar
+file.reference.jpos.jar=lib/jpos.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.javax.ws.rs.jar}:\
-    ${file.reference.javax.ws.rs-api-2.0.jar}
+    ${file.reference.javax.ws.rs-api-2.0.jar}:\
+    ${file.reference.jpos.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
