--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/AllTestClasses.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.java-mail-1.4.4.jar=lib/java-mail-1.4.4.jar
 file.reference.javax.ws.rs-api-2.0.jar=lib/javax.ws.rs-api-2.0.jar
 file.reference.javax.ws.rs.jar=lib/javax.ws.rs.jar
 file.reference.jpos.jar=lib/jpos.jar
@@ -37,7 +38,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.javax.ws.rs.jar}:\
     ${file.reference.javax.ws.rs-api-2.0.jar}:\
-    ${file.reference.jpos.jar}
+    ${file.reference.jpos.jar}:\
+    ${file.reference.java-mail-1.4.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
